# aw-watcher-input

./: pyproject.toml
src/aw_client/: client.py  config.py  singleinstance.py
src/aw_core/: __init__.py  config.py  dirs.py  log.py  models.py
src/aw_transform/: __init__.py  heartbeats.py
src/aw_watcher_input/: main.py
src/aw_watcher_input/aw_watcher_afk/: __main__.py  linux_input.py  listeners.py  unix.py
src/persistqueue/: __init__.py  fifo.py
