[tool.poetry]
name = "aw-watcher-input"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "aw_watcher_input", from = "src" },
    { include = "aw_client", from = "src" },
    { include = "aw_core", from = "src" },
    { include = "aw_transform", from = "src" },
    { include = "persistqueue", from = "src" }
]

[tool.poetry.scripts]
aw-watcher-input = "aw_watcher_input.main:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pyinstaller = { version = "^6.6", python = "^3.8,<3.14" }
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
